; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kernel/extr_irq_ia64.c_ia64_native_free_irq_vector.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kernel/extr_irq_ia64.c_ia64_native_free_irq_vector.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IA64_FIRST_DEVICE_VECTOR = common dso_local global i32 0, align 4
@IA64_LAST_DEVICE_VECTOR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ia64_native_free_irq_vector(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @IA64_FIRST_DEVICE_VECTOR, align 4
  %5 = icmp slt i32 %3, %4
  br i1 %5, label %10, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @IA64_LAST_DEVICE_VECTOR, align 4
  %9 = icmp sgt i32 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %6, %1
  br label %14

11:                                               ; preds = %6
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @clear_irq_vector(i32 %12)
  br label %14

14:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @clear_irq_vector(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
